--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+# DATABASE_URL="postgresql://postgres:291010@localhost:5432/TasksListDB?schema=public"
 
-DATABASE_URL="postgresql://postgres:291010@localhost:5432/TasksListDB?schema=public"
+DATABASE_URL=postgresql://clouddb_owner:IyjJ2rRUd9mB@ep-sweet-water-a56r9eo0.us-east-2.aws.neon.tech/TasksListDB?sslmode=require
