--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-DATABASE_URL="postgresql://postgres:291010@localhost:5432/TasksListDB?schema=public"
+# DATABASE_URL="postgresql://postgres:291010@localhost:5432/TasksListDB?schema=public"
+DATABASE_URL="postgresql://TasksListDB_owner:sKVY0AHMEJy9@ep-dry-resonance-a5wyjztf.us-east-2.aws.neon.tech/TasksListDB?sslmode=require"
 
